# weston

./: .gitignore  .gitlab-ci.yml  RELEASING.md  meson.build  meson_options.txt  weston.ini.in
.gitlab-ci/: build-and-test.sh  build-deps.sh  build.sh  debian-install.sh  leak-sanitizer.supp  test.sh
.gitlab-ci/virtme-scripts/: run-weston-tests.sh
clients/: calibrator.c  clickdot.c  cliptest.c  color.c  constraints.c  desktop-shell.c  dnd.c  editor.c  eventdemo.c  fullscreen.c  image.c  ivi-shell-user-interface.c  meson.build  presentation-shm.c  qnx-desktop-shell.c  scaler.c  screenshot.c  simple-dmabuf-egl.c  simple-dmabuf-feedback.c  simple-dmabuf-v4l.c  simple-dmabuf-vulkan.c  simple-egl.c  simple-im.c  simple-shm.c  simple-timing.c  simple-touch.c  simple-vulkan.c  simple_dmabuf_vulkan_fragment_shader.frag  simple_dmabuf_vulkan_vertex_shader.vert  simple_vulkan_fragment_shader.frag  simple_vulkan_vertex_shader.vert  stacking.c  subsurfaces.c  terminal.c  touch-calibrator.c  weston-debug.c  window.c  window.h
compositor/: main.c  screen-share.c
coverage/: meson.build
data/: COPYING  meson.build
desktop-shell/: input-panel.c  qnx-shell.c  qnx-shell.h  shell.c  shell.h
doc/perfetto/: perfetto_out_of_process_trace.cfg
doc/sphinx/: conf.py.in  doxygen.ini.in  index.rst  meson.build  run_doxygen_sphinx.sh.in
frontend/: config-helpers.c  main.c  meson.build  screen-share.c  systemd-notify.c  text-backend.c  weston-private.h  weston-screenshooter.c  xwayland.c
fullscreen-shell/: fullscreen-shell.c  meson.build
include/libweston/: backend-drm.h  backend-headless.h  backend-pipewire.h  backend-rdp.h  colorimetry.h  config-parser.h  desktop.h  helpers.h  libweston.h  linalg-3.h  linalg-4.h  linalg-types.h  linalg.h  matrix.h  meson.build  shell-utils.h  weston-log.h  windowed-output-api.h
ivi-shell/: hmi-controller.c  ivi-layout-export.h  ivi-layout-private.h  ivi-layout-shell.h  ivi-layout.c  ivi-shell.c  weston.ini.in
kiosk-shell/: kiosk-shell-grab.c  kiosk-shell.c  kiosk-shell.h
libweston/: animation.c  backend.h  bindings.c  clipboard.c  color-management.c  color-management.h  color-noop.c  color-operations.c  color-operations.h  color-profile-param-builder.c  color-properties.c  color-properties.h  color-representation.c  color-representation.h  color.c  color.h  commit-timing.c  commit-timing.h  compositor.c  content-protection.c  data-device.c  fifo.c  fifo.h  gl-borders.c  id-number-allocator.c  input.c  launcher-libseat.c  libinput-device.c  libinput-seat.c  libweston-internal.h  linux-dmabuf.c  linux-sync-file-uapi.h  meson.build  noop-renderer.c  output-capture.c  output-capture.h  pixel-formats.c  pixel-formats.h  pixman-renderer.c  pixman-renderer.h  (+14 more)
libweston/backend-drm/: drm-gbm.c  drm-internal.h  drm-kms-enums.h  drm-virtual.c  drm.c  fb.c  kms-color.c  kms.c  libbacklight.c  meson.build  modes.c  state-helpers.c  state-propose.c
libweston/backend-headless/: headless.c  meson.build
libweston/backend-pipewire/: pipewire.c
libweston/backend-rdp/: meson.build  rdp.c  rdp.h
libweston/backend-vnc/: meson.build  vnc.c
libweston/backend-wayland/: meson.build  wayland.c
libweston/backend-x11/: x11.c
libweston/color-lcms/: color-curve-segments.c  color-curve-segments.h  color-lcms.c  color-lcms.h  color-profile.c  color-transform.c  color-transformer.c  meson.build
libweston/desktop/: internal.h  libweston-desktop.c  seat.c  surface.c  xdg-shell-v6.c  xdg-shell.c  xwayland.c
libweston/perfetto/: u_atomic.h  (+2 more)
libweston/renderer-vulkan/: meson.build  vulkan-pipeline.c  vulkan-pixel-format.c  vulkan-renderer-internal.h  vulkan-renderer.c  vulkan-renderer.h  vulkan_fragment_shader.frag  vulkan_vertex_shader_surface.vert  vulkan_vertex_shader_texcoord.vert
lua-shell/: lua-shell.c  lua-shell.h  meson.build  shell.lua
man/: weston-bindings.man  weston-drm.man  weston-rdp.man  weston.ini.man  weston.man
pipewire/: meson.build
protocol/: meson.build  qnx-weston-desktop-shell.xml  weston-output-capture.xml  weston-test.xml
qnx/: README.md
remoting/: meson.build  remoting-plugin.c
shared/: cairo-util.c  cairo-util.h  client-buffer-util.c  client-buffer-util.h  config-parser.c  frame.c  helpers.h  image-loader.c  matrix.c  meson.build  option-parser.c  os-compatibility.c  os-compatibility.h  platform.h  process-util.c  string-helpers.h  timespec-util.h  weston-assert.h  weston-drm-fourcc.h  weston-egl-ext.h  xalloc.h  xcb-xwayland.c
subprojects/: display-info.wrap
tests/: alpha-blending-test.c  assert-test.c  bad-buffer-test.c  buffer-transforms-test.c  client-buffer-test.c  color-effects-test.c  color-icc-output-test.c  color-lcms-optimizer-test.c  color-management-parametric-test.c  color-management-test.c  color-math-test.c  color-metadata-errors-test.c  color-metadata-parsing-test.c  color-output-parsing-test.c  color-representation-common.c  color-representation-common.h  color-representation-drm-test.c  color-representation-protocol-test.c  color-representation-renderer-test.c  color_util.c  color_util.h  commit-timing-test.c  config-parser-test.c  constraints-test.c  custom-env-test.c  devices-test.c  dmabuf-screenshot-test.c  drm-formats-test.c  drm-offload-test.c  drm-smoke-test.c  drm-writeback-screenshot-test.c  event-test.c  fifo-test.c  idalloc-test.c  image-iter.h  input-timestamps-helper.c  internal-screenshot-test.c  iterate-debug-scopes-test.c  ivi-layout-internal-test.c  ivi-layout-test-client.c  (+56 more)
tests/harness/: color-manager-client.c  color-manager-client.h  color_util.h  lcms_util.c  lcms_util.h  meson.build  weston-test-assert.h  weston-test-client-helper.c  weston-test-client-helper.h  weston-test-desktop-shell.c  weston-test-fixture-compositor.c  weston-test-fixture-compositor.h  weston-test-runner.c  weston-test-runner.h  weston-test.c  xcb-client-helper.c  xcb-client-helper.h  xdg-client-helper.c
tests/reference/: colorful-cat.png.license  hp-5dq99aa-hdmi.edid.license
westinyplus/: meson.build
westinyplus/src/: main.cpp  main.h
xwayland/: launcher.c  selection.c  window-manager.c  xwayland.h
(+20 files in other folders)
